<resources>
    <string name="app_name">My Local Banks</string>
    <string name="bank1">DBS</string>
    <string name="bank1sub">DEVELOPMENT BANK OF SINGAPORE</string>
    <string name="bank2">OCBC</string>
    <string name="bank2sub">OVERSEA CHINESE BANKING CORPORATION</string>
    <string name="bank3">UOB</string>
    <string name="bank3sub">UNITED OVERSEAS BANKING</string>
    <string name="options">PRESS FOR OPTIONS</string>
</resources>